<resources>
    <string name="app_name">Android2HomeWork2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Пропустить</string>
    <string name="plus">+</string>
    <string name="SearchNotes">Поиск Заметок</string>
    <string name="notes">Заметки</string>
    <string name="OnBoardPagingText">Очень удобный функционал</string>
    <string name="OnBoardText2">Быстрый, качественный продукт</string>
    <string name="OnBoardText3">Куча функций и интересных фишек</string>
    <string name="Beginning_of_work">Начать работу</string>
    <string name="add_note_button_description">add_note_button_description</string>
    <string name="_30">30 мая</string>
    <string name="_17_21">17:21</string>
    <string name="arrow_left">Arrow_left</string>
    <string name="ready">Готово</string>
</resources>