<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0C0C">

    <ImageButton
        android:id="@+id/arrow_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#0E0C0C"
        android:contentDescription="@string/arrow_left"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_30"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_left"
        app:layout_constraintStart_toEndOf="@+id/arrow_left"
        app:layout_constraintTop_toTopOf="@+id/arrow_left" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/_17_21"
        android:textColor="#B1B1B1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/day"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="@+id/day" />

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textColor="@color/backgroundButtonColor"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_description_fragment_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/transparent"
        tools:hint="что нужно сделать"
        android:textColor="#B1B1B1"
        android:textColorHint="#B1B1B1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <EditText
        android:id="@+id/edit_text_fragment_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/transparent"
        android:gravity="top|start"
        tools:hint="text"
        android:textColor="#B1B1B1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description_fragment_detail" />

    <Button
        android:id="@+id/button_black"
        android:layout_width="95dp"
        tools:text="button3"
        android:layout_height="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounderforbuttons"
        android:backgroundTint="#191818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_white"
        android:layout_width="95dp"
        android:layout_height="55dp"
        tools:text="button2"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounderforbuttons"
        android:backgroundTint="#EBE4C9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button_black" />

    <Button
        android:id="@+id/button"
        android:layout_width="95dp"
        tools:text="button1"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounderforbuttons"
        android:backgroundTint="#571818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>