<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#131212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_menu_home_fragment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_home_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notes"
            android:textColor="#B1B1B1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/image_change_layout_manager_fragment_home"
            app:layout_constraintStart_toEndOf="@+id/image_menu_home_fragment"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_change_layout_manager_fragment_home"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/grid_them"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_text_find_notes"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounderforsearch"
        android:backgroundTint="#191818"
        android:drawableStart="@drawable/search"
        android:drawablePadding="10dp"
        android:hint="@string/SearchNotes"
        android:paddingStart="20dp"
        android:textColor="@color/textDefaultColor"
        android:textColorHint="#B1B1B1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_fragment_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_find_notes" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add_note"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="25dp"
        android:contentDescription="@string/add_note_button_description"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/backgroundButtonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>